<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageview_photo_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/px_20"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_20"
        android:layout_marginRight="@dimen/px_20"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageview_photo_select_1"
            android:layout_width="@dimen/px_75"
            android:layout_height="@dimen/px_100"
            android:background="@drawable/selector_photo_show_item" />

        <ImageView
            android:id="@+id/imageview_photo_select_2"
            android:layout_width="@dimen/px_75"
            android:layout_height="@dimen/px_100"
            android:layout_marginLeft="@dimen/px_10"
            android:layout_marginRight="@dimen/px_10"
            android:background="@drawable/selector_photo_show_item" />

        <ImageView
            android:id="@+id/imageview_photo_select_3"
            android:layout_width="@dimen/px_75"
            android:layout_height="@dimen/px_100"
            android:background="@drawable/selector_photo_show_item" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_111"
        android:layout_marginTop="@dimen/px_16"
        android:background="@drawable/bottom_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reshoot"
            android:layout_width="@dimen/px_82"
            android:layout_height="@dimen/px_82"
            android:background="@drawable/selector_reshoot_button"
            android:text="@string/shoot_photo"
            android:textColor="@color/white"
            android:textSize="@dimen/px_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/select_photo_tip"
            android:textColor="@color/white"
            android:textSize="@dimen/px_20" />

        <Button
            android:id="@+id/btn_select_confirm"
            android:layout_width="@dimen/px_82"
            android:layout_height="@dimen/px_82"
            android:background="@drawable/selector_green_button"
            android:text="@string/btn_confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/px_18" />
    </LinearLayout>
</LinearLayout>