<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:background="@android:color/background_dark">

        <com.emptech.biocollectiononline.views.WaveView
            android:id="@+id/wave"
            android:layout_width="107dp"
            android:layout_height="107dp"
            android:layout_gravity="center"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="600dp"
                android:layout_height="800dp"
                >
                <com.emptech.biocollectiononline.camera.CameraGLSurfaceView
                    android:id="@+id/surface_view"
                    android:layout_width="match_parent"
                    android:layout_height="800dp" />

                <com.emptech.biocollectiononline.views.FaceView
                    android:id="@+id/face_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/close_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:gravity="center"
                    android:text="预览已关闭"/>
                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:background="@mipmap/person"
                    android:scaleType="fitXY" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginRight="90dp"
                    android:gravity="center"
                    android:textSize="28sp"
                    android:textColor="#ffffff"
                    android:text="@string/photo_tip"/>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/show_lay"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <!--<SeekBar-->
                <!--android:id="@+id/lightSeek"-->
                <!--android:visibility="gone"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="5dp"-->
                <!--android:layout_gravity="center"/>-->
                <TextView
                    android:id="@+id/tv_photo_tip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/px_6"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/px_24"
            android:textColor="@color/white"
            android:textSize="@dimen/px_60"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/px_162"
            android:background="@drawable/shape_photograph_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/px_24"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:visibility="gone" />

            <TextView
                android:id="@+id/take_photo_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/px_16" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/photo_bottom_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btn_photo_shoot"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_109"
                android:layout_weight="1"
                android:background="@drawable/photo_selector_mode_bg"
                android:text="@string/shoot_photo"
                android:textColor="@color/white"
                android:textSize="@dimen/px_22" />

            <Button
                android:id="@+id/btn_photo_countdown"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_109"
                android:layout_weight="1"
                android:background="@drawable/photo_selector_mode_bg"
                android:text="@string/countdown_photo"
                android:textColor="@color/white"
                android:textSize="@dimen/px_22" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>

